(lang dune 3.19)

(name akaML)

(generate_opam_files true)

(source
 (github Friend-zva/akaML))

(authors
 "Maxim Rodionov <rodionov.maxim05@gmail.com>"
 "Vladimir Zaikin <friend.zva@yandex.ru>")

(maintainers
 "Maxim Rodionov <rodionov.maxim05@gmail.com>"
 "Vladimir Zaikin <friend.zva@yandex.ru>")

(license "LGPL-3.0-or-later WITH OCaml-LGPL-linking-exception")

(package
 (name akaML)
 (synopsis "A miniML compiler")
 (depends
  dune
  base
  angstrom
  qcheck-core
  (ppx_inline_test :with-test)
  ppx_deriving
  ppx_deriving_qcheck
  ppx_expect
  bisect_ppx))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
